HELLO, everybody, I'm a HUMAN!!

--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -1,8 +1,7 @@
-<div ng>
+<div ng-controller="home_controller">
 
-</div>
-
-<h1>Welcome</h1>
-<p>
+  <h1>Welcome</h1>
+  <p>
     <a href="/login">login</a>
-</p>
+  </p>
+</div>
