--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -3,6 +3,6 @@
   <h1>Welcome</h1>
   <p>
       <input type="text" ng-model="input_user">
-    <a href="#!/login">login</a>
+    <a href="/api/">login</a>
   </p>
 </div>
