Be careful of reading health books, you might die of a misprint. 		-- Mark Twain

--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -3,7 +3,7 @@
   <h1>Welcome</h1>
   <p>
       <input type="text" ng-model="input_user">
-      <a href="/login">login</a>
+      <a href="#!/login">login</a>
       
     <!-- <a href="/api/v1/auth">login</a> -->
   </p>
