--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -3,8 +3,8 @@
   <h1>Welcome</h1>
   <p>
       <input type="text" ng-model="input_user">
-      <a href="/api/v1/auth?returnTo={{'/logged_in'}}">login</a>
+      <!-- <a href="/api/v1/auth?returnTo={{'#!/logged_in'}}">login</a> -->
       
-    <!-- <a href="/api/v1/auth">login</a> -->
+    <a href="/api/v1/auth">login</a>
   </p>
 </div>
