In /users3 did Kubla Kahn A stately pleasure dome decree, Where /bin, the sacred river ran Through Test Suites measureless to Man Down to a sunless C.

--- a/public/partials/logged_in.html
+++ b/public/partials/logged_in.html
@@ -1,5 +1,8 @@
-<h2 ng-controller="logged_in_controller">
+<div ng-controller="logged_in_controller">
+  <h2>
     you are now logged in via github.
-</h2>
+  </h2>
+  <a href="/api/v1/logout">logout</a>
 
-<a href="/api/v1/logout">logout</a>
+
+</div>
