One nuclear bomb can ruin your whole day.

--- a/public/partials/logged_in.html
+++ b/public/partials/logged_in.html
@@ -2,6 +2,8 @@
   <h2>
     you are now logged in via github.
   </h2>
+
+  <a href="#!/repositories">repositories</a>
   <a href="/api/v1/logout">logout</a>
 
 
