Have an adequate day.

--- a/public/partials/repositories.html
+++ b/public/partials/repositories.html
@@ -1,4 +1,15 @@
 <div ng-controller="repositories_controller">
+<h2>Repositories</h2>
 
+<table class="table">
+<thead>
+    <tr>
+        <th>
+            
+        </th>
+    </tr>
+</thead>
+
+</table>
     
 </div>
