My doctor told me to stop having intimate dinners for four.  Unless there are three other people. 		-- Orson Welles

--- a/public/partials/repositories.html
+++ b/public/partials/repositories.html
@@ -5,10 +5,15 @@
 <thead>
     <tr>
         <th>
-            
+            name
         </th>
     </tr>
 </thead>
+<tbody ng-repeat="rep in repositories">
+    <tr>
+        <td>{{rep.name}}</td>
+    </tr>
+</tbody>
 
 </table>
     
