If you lose your temper at a newspaper columnist, he'll get rich, or famous or both.

--- a/public/partials/repositories.html
+++ b/public/partials/repositories.html
@@ -1,4 +1,4 @@
-<div ng-controller="repositories_controller">
+<div ng-controller="reps_controller">
 <h2>Repositories</h2>
 
 <table class="table">
@@ -9,7 +9,7 @@
         </th>
     </tr>
 </thead>
-<tbody ng-repeat="rep in repositories">
+<tbody ng-repeat="rep in reps">
     <tr>
         <td>{{rep.name}}</td>
     </tr>
