Finally, Zippy drives his 1958 RAMBLER METROPOLITAN into the faculty dining room.

--- a/public/partials/repositories.html
+++ b/public/partials/repositories.html
@@ -7,11 +7,15 @@
         <th>
             name
         </th>
+        <th>
+            link
+        </th>
     </tr>
 </thead>
 <tbody ng-repeat="rep in reps">
     <tr>
         <td>{{rep.name}}</td>
+        <td><a href="{{rep.}}"></a></td>
     </tr>
 </tbody>
 
