Your reasoning powers are good, and you are a fairly good planner.

--- a/public/partials/repositories.html
+++ b/public/partials/repositories.html
@@ -15,7 +15,7 @@
 <tbody ng-repeat="rep in reps">
     <tr>
         <td>{{rep.name}}</td>
-        <td><a href="{{rep.}}"></a></td>
+        <td><a href="{{rep.html_url}}">{{rep.html_url}}}</a></td>
     </tr>
 </tbody>
 
