--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -2,7 +2,7 @@
 
   <h1>Welcome</h1>
   <p>
-    <input type="text" ng-model="input_user">
-    <a href="/api/v1/auth">login</a>
+  
+    <a href="/api/v1/auth">login to github</a>
   </p>
 </div>
