--- a/public/partials/repositories.html
+++ b/public/partials/repositories.html
@@ -13,7 +13,7 @@
     </tr>
 </thead>
 <tbody ng-repeat="rep in reps">
-    <tr>
+    <tr data-drag="true" jqyoui-draggable>
         <td>{{rep.name}}</td>
         <td><a href="{{rep.html_url}}">{{rep.html_url}}}</a></td>
     </tr>
