I went to the race track once and bet on a horse that was so good that it took seven others to beat him!

--- a/public/partials/repositories.html
+++ b/public/partials/repositories.html
@@ -13,7 +13,7 @@
       </tr>
     </thead>
     <tbody ng-repeat="rep in reps">
-      <tr drag-container="true" drag-data="model" on-drag-start="ctl.handleDragStart($event, $dragData)" on-drag-end="ctl.handleDragEnd($event, $dragData)">
+      <tr gmDraggable="">
         <td>{{rep.name}}</td>
         <td>
           <a href="{{rep.html_url}}">{{rep.html_url}}}</a>
