I'm ZIPPY the PINHEAD and I'm totally committed to the festive mode.

--- a/public/partials/repositories.html
+++ b/public/partials/repositories.html
@@ -13,7 +13,7 @@
       </tr>
     </thead>
     <tbody ng-repeat="rep in reps">
-      <tr gmDraggable="rep">
+      <tr gmDraggable="{rep:rep}">
         <td>{{rep.name}}</td>
         <td>
           <a href="{{rep.html_url}}">{{rep.html_url}}}</a>
