When I saw a sign on the freeway that said, "Los Angeles 445 miles," I said to myself, "I've got to get out of this lane." 		-- Franklyn Ajaye

--- a/public/partials/repositories.html
+++ b/public/partials/repositories.html
@@ -12,8 +12,8 @@
         </th>
       </tr>
     </thead>
-    <tbody ng-repeat="rep in reps">
-      <tr gmDraggable="{rep:rep}">
+    <tbody ng-repeat="rep in reps"  gmDraggable="rep" gm-on-invalid-drop='reset' gm-on-drop='reorder' gm-on-hover='onHover(item)'>
+      <tr>
         <td>{{rep.name}}</td>
         <td>
           <a href="{{rep.html_url}}">{{rep.html_url}}}</a>
