--- a/public/partials/repositories.html
+++ b/public/partials/repositories.html
@@ -18,7 +18,7 @@
         <td>
           <a href="{{rep.html_url}}">{{rep.html_url}}}</a>
         </td>
-        
+        <td><button ng-click="delete(rep)">delete</button></td>
       </tr>
     </tbody>
 
